Bug 465263.  When setting location.hash to empty string, treat that as identical to '#' for compat with IE.  r+sr=jst, a=beltzner