dom/src/base/nsLocation.cpp
@@ -431,7 +431,11 @@ nsLocation::SetHash(const nsAString& aHash)
 
   nsCOMPtr<nsIURL> url(do_QueryInterface(uri));
   if (url) {
-    rv = url->SetRef(NS_ConvertUTF16toUTF8(aHash));
+    NS_ConvertUTF16toUTF8 hash(aHash);
+    if (hash.IsEmpty() || hash.First() != PRUnichar('#')) {
+      hash.Insert(PRUnichar('#'), 0);
+    }
+    rv = url->SetRef(hash);
     if (NS_SUCCEEDED(rv)) {
       SetURI(url);
     }
